Convierte a entero las similaridades